--- a/dea-api.yaml
+++ b/dea-api.yaml
@@ -13,15 +13,15 @@ info:
     Some useful links:
 
     - [The DEA Datastore
-    repository](https://github.com/swagger-api/swagger-dea-datastore)
+    repository](https://github.com/AliaSpaceSystems/DEA-API/tree/docs)
 
     - [The source API definition for the DEA
-    Datastore](https://github.com/swagger-api/swagger-dea-datastore/blob/master/src/main/resources/openapi.yaml)
+    Datastore](https://github.com/AliaSpaceSystems/DEA-API/blob/docs/dea-api.yaml)
   version: 0.0.1
   title: Swagger DEA Datastore - OpenAPI 3.0
   termsOfService: http://swagger.io/terms/
   contact:
-    email: apiteam@swagger.io
+    email: destine@alia-space.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
